updated with the forms

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="contact-form">
             <h2 class="contact-heading">GET IN TOUCH</h2>
             <p class="contact-subtitle">Reach out for support and questions</p>
-            <form action="#">
+            <form action="https://formspree.io/f/mnnqpwnk" method="POST">
               <label for="name">Name <span>*</span></label>
               <input type="text" id="name" name="name" required>
               
